<resources>
    <string name="app_name" translatable="false">MentalGame</string>
    <string name="BUTTON_GAME" translatable="false">Jouer</string>
    <string name="BUTTON_SCORE" translatable="false">Scores</string>
    <string name="LIFE_1" translatable="false">Vie 1</string>
    <string name="LIFE_2" translatable="false">Vie 2</string>
    <string name="LIFE_3" translatable="false">Vie 3</string>
    <string name="bouton_1" translatable="false">1</string>
    <string name="bouton_2" translatable="false">2</string>
    <string name="bouton_3" translatable="false">3</string>
    <string name="bouton_4" translatable="false">4</string>
    <string name="bouton_5" translatable="false">5</string>
    <string name="bouton_6" translatable="false">6</string>
    <string name="bouton_7" translatable="false">7</string>
    <string name="bouton_8" translatable="false">8</string>
    <string name="bouton_9" translatable="false">9</string>
    <string name="bouton_0" translatable="false">0</string>
    <string name="bouton_suppr" translatable="false">Suppr</string>
    <string name="bouton_send" translatable="false">Enter</string>
    <string name="textViewCreditsTitle" translatable="false">Crédits</string>
    <string name="textViewCreditsContent" translatable="false">Développeurs : Arthur et Louis\nDesigners : Arthur et Louis\nTesteurs : Arthur et Louis\n\nVersion de l\'application : 1.0.0\n\nRemerciements spéciaux : \nMerci à tous ceux qui ont contribué au développement de cette application.\n\nMentions légales : \nToutes les informations et les images de cette application sont protégées par les droits d'auteur. \n\nArthur GRAMONT &amp; Louis PADÉ © 2024</string>
    <string name="bouton_regles" translatable="false">Règles du Jeu</string>
    <string name="textViewRegles" translatable="false">\n1. Le jeu consiste à résoudre des problèmes de calcul mental.\n2. Chaque partie comporte plusieurs niveaux de difficulté croissante.\n3. À chaque niveau, le joueur doit répondre correctement à une question pour passer au niveau suivant.\n4. Le joueur gagne des points pour chaque réponse correcte et perd une vie pour chaque réponse incorrecte.\n5. Le jeu se termine lorsque le joueur n'a plus de vies.\n6. Les meilleurs scores sont enregistrés pour le classement final.\n\nAmusez-vous bien !</string>
    <string name="textViewTitreScore" translatable="false">HIGH SCORE</string>
</resources>