<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textColor="@color/text_color"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="24dp" />

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/bouton_jouer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:text="@string/BUTTON_GAME"
            android:textColor="@color/white"
            android:backgroundTint="@color/button_color"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium" />

        <Button
            android:id="@+id/bouton_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:text="@string/BUTTON_SCORE"
            android:textColor="@color/white"
            android:backgroundTint="@color/button_color"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium" />

        <Button
            android:id="@+id/bouton_credits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:text="Crédits"
            android:textColor="@color/white"
            android:backgroundTint="@color/button_color"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium" />

        <Button
            android:id="@+id/bouton_regles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="Règles du Jeu"
            android:textColor="@color/white"
            android:backgroundTint="@color/button_color"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
